# seedance-refactored

./: .gitignore  AGENT.md  API_IMPLEMENTATION_ANALYSIS.md  INTEGRATION_TEST_SUMMARY.md  PUSH_INSTRUCTIONS.md  README.md  advanced_example.py  demo_new_features.py  example_usage.py  example_video_generation.py  pyproject.toml  pyproject.toml.seedance-cli  test_imports.py  test_video_generation_models.py
docs/: python_coding_standards.md
src/: __init__.py
src/osins_seedance/: __init__.py  config.py
src/osins_seedance/v3/: __init__.py  client.py
src/osins_seedance/v3/api/: api_v3_contents_generations_tasks.py
src/osins_seedance/v3/client/: cache_mechanism.py  connection_pool.py  error_handling.py  retry_mechanism.py  session_management.py  volces_client.py
src/osins_seedance/v3/model/: request_body.py  video_generation_request_body.py  video_generation_response_body.py
src/osins_seedance/v3/utils/: common_utils.py  enums.py  error_utils.py  retry_utils.py  validation_utils.py
src/seedance/: __init__.py  config.py
src/seedance/v3/: __init__.py  models.py  utils.py  volces_client.py
src/seedance/v3/client/: base_client.py  client_decorators.py  performance_optimization.py  volces_client.py
src/seedance/v3/config/: config.py
src/seedance/v3/model/: request_body.py  response_body.py
src/seedance/v3/utils/: cache_utils.py
tests/: integration_test.py  test_advanced_client.py  test_client.py  test_config.py  test_end_to_end.py  test_improved_features.py
